--- a/index.html
+++ b/index.html
@@ -113,24 +113,137 @@
     </div>
 </header>
 <main>
+    <!--section banner -->
     <section class="banner">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col pos-rel m-r20">
                     <img src="images/banner/MaskGroup0.jpg" alt="">
+
+                    <div class="banner-title">
+                        <p> Предзаказ велосипедов <br> <span> Трек 2021</span> года
+                        <p>
+                            <button class="btn">Подробние</button>
+                    </div>
+                    <div class="banner-indicator">
+                        <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="3.5" cy="3.5" r="3.5" fill="white"/>
+                        </svg>
+                        <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle opacity="0.5" cx="3.5" cy="3.5" r="3.5" fill="white"/>
+                        </svg>
+                        <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle opacity="0.5" cx="3.5" cy="3.5" r="3.5" fill="white"/>
+                        </svg>
+                        <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle opacity="0.5" cx="3.5" cy="3.5" r="3.5" fill="white"/>
+                        </svg>
+                        <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle opacity="0.5" cx="3.5" cy="3.5" r="3.5" fill="white"/>
+                        </svg>
+                    </div>
                 </div>
-                <div class="col">
-                    <div><img style="width: 352px;" src="images/banner/Mask-Group1.jpg" alt=""></div>
-                    <div><img style="width: 352px;" src="images/banner/MaskGroup2.jpg" alt=""></div>
+
+                <div class="col pos-rel">
+                    <div>
+                        <div class="banner-title__leftOne">
+                            <b>Соберите уникальный <br> велосипед!</b>
+                            <p>Мы предлагаем услуги по индивидуальной <br>
+                                сборке и настройке велосипедов</p>
+                            <button class="btn">Хочу свой велосипед</button>
+                        </div>
+                        <img style="width: 352px;" src="images/banner/Mask-Group1.jpg" alt="">
+                    </div>
+
+                    <div style="padding-top: 27px;" class="pos-rel">
+                        <div class="banner-title__leftWho">
+                            <p>Выбирайте велосипед <br>
+                                и запчасти в нашем</p>
+                            <a href="">каталоге</a>
+                        </div>
+                        <img style="width: 352px;" src="images/banner/MaskGroup2.jpg" alt="">
+                    </div>
                 </div>
-            
+
             </div>
-            
+
         </div>
 
 
     </section>
-    <section></section>
+
+    <!--Product Catalog -->
+    <section class="productCatalog">
+        <div class="container">
+            <div class="productCatalog-title">
+                <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.73529 0L0 10.495H6.73529L2.11871 20L13.4706 8.974H6.20586L14 0H6.73529Z"
+                          fill="#59D230"/>
+                </svg>
+                каталог продукции
+                <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.73529 0L0 10.495H6.73529L2.11871 20L13.4706 8.974H6.20586L14 0H6.73529Z"
+                          fill="#59D230"/>
+                </svg>
+
+            </div>
+
+            <div class="row">
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/masterbike 2.png" alt="">
+                    </div>
+                        <div class="productCatalog-name">Велосипеды</div>
+                    </div>
+                    <div class="productCatalog-col">
+                        <div class="productCatalog-img">
+                            <img src="images/productCatalog/H66512-228x228 1.png" alt="">
+                        </div>
+                            <div class="productCatalog-name">Аксессуары</div>
+                        </div>
+                        <div class="productCatalog-col">
+                            <div class="productCatalog-img">
+                                <img src="images/productCatalog/KURTKA.png" alt="">
+                            </div>
+                                <div class="productCatalog-name">экипировка И ФОРМА</div>
+                            </div>
+                            <div class="productCatalog-col">
+                                <div class="productCatalog-img">
+                                    <img src="images/productCatalog/masterbike 2.png" alt="">
+                                </div>
+                                    <div class="productCatalog-name">запчасти</div>
+                                </div>
+                                <div class="productCatalog-col">
+                                    <div class="productCatalog-img">
+                                        <img src="images/productCatalog/image156.png" alt="">
+                                    </div>
+                                        <div class="productCatalog-name">Электротранспорт:</div>
+                                           <span>электровелосипеды, гироборды...</span>
+
+                                    </div>
+                                    <div class="productCatalog-col">
+                                        <div class="productCatalog-img">
+                                            <img src="images/productCatalog/image 151.png" alt="">
+                                        </div>
+                                            <div class="productCatalog-name">САМОКАТЫ</div>
+                                        </div>
+                                        <div class="productCatalog-col">
+                                            <div class="productCatalog-img">
+                                                <img src="images/productCatalog/image115.png" alt="">
+                                            </div>
+                                            <div class="productCatalog-name">Зимние товары</div>
+                                        </div>
+                                        <div class="productCatalog-col">
+                                            <div class="productCatalog-img">
+                                                <img src="images/productCatalog/image176.png" alt="">
+                                            </div>
+                                            <div class="productCatalog-name">акции и скидки</div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
