--- a/index.html
+++ b/index.html
@@ -193,58 +193,100 @@
                     <div class="productCatalog-img">
                         <img src="images/productCatalog/masterbike 2.png" alt="">
                     </div>
-                        <div class="productCatalog-name">Велосипеды</div>
+                    <a href=""> <div class="productCatalog-name">Велосипеды</div></a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/H66512-228x228 1.png" alt="">
                     </div>
-                    <div class="productCatalog-col">
-                        <div class="productCatalog-img">
-                            <img src="images/productCatalog/H66512-228x228 1.png" alt="">
-                        </div>
-                            <div class="productCatalog-name">Аксессуары</div>
-                        </div>
-                        <div class="productCatalog-col">
-                            <div class="productCatalog-img">
-                                <img src="images/productCatalog/KURTKA.png" alt="">
-                            </div>
-                                <div class="productCatalog-name">экипировка И ФОРМА</div>
-                            </div>
-                            <div class="productCatalog-col">
-                                <div class="productCatalog-img">
-                                    <img src="images/productCatalog/masterbike 2.png" alt="">
-                                </div>
-                                    <div class="productCatalog-name">запчасти</div>
-                                </div>
-                                <div class="productCatalog-col">
-                                    <div class="productCatalog-img">
-                                        <img src="images/productCatalog/image156.png" alt="">
-                                    </div>
-                                        <div class="productCatalog-name">Электротранспорт:</div>
-                                           <span>электровелосипеды, гироборды...</span>
+                    <a href=""> <div class="productCatalog-name">Аксессуары</div></a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/KURTKA.png" alt="">
+                    </div>
+                    <a href=""> <div class="productCatalog-name">экипировка И ФОРМА</div> </a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/masterbike 2.png" alt="">
+                    </div>
+                    <a href=""> <div class="productCatalog-name">запчасти</div></a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/image156.png" alt="">
+                    </div>
+                    <a href=""> <div class="productCatalog-name">Электротранспорт
+                        <span>электровелосипеды, гироборды...</span>
+                    </div> </a>
 
-                                    </div>
-                                    <div class="productCatalog-col">
-                                        <div class="productCatalog-img">
-                                            <img src="images/productCatalog/image 151.png" alt="">
-                                        </div>
-                                            <div class="productCatalog-name">САМОКАТЫ</div>
-                                        </div>
-                                        <div class="productCatalog-col">
-                                            <div class="productCatalog-img">
-                                                <img src="images/productCatalog/image115.png" alt="">
-                                            </div>
-                                            <div class="productCatalog-name">Зимние товары</div>
-                                        </div>
-                                        <div class="productCatalog-col">
-                                            <div class="productCatalog-img">
-                                                <img src="images/productCatalog/image176.png" alt="">
-                                            </div>
-                                            <div class="productCatalog-name">акции и скидки</div>
-                                        </div>
+                </div>
 
-                                    </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/image 151.png" alt="">
+                    </div>
+                    <a href=""><div class="productCatalog-name">САМОКАТЫ</div> </a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/image115.png" alt="">
+                    </div>
+                    <a href=""> <div class="productCatalog-name">Зимние товары</div></a>
+                </div>
+                <div class="productCatalog-col">
+                    <div class="productCatalog-img">
+                        <img src="images/productCatalog/image176.png" alt="">
+                    </div>
+                    <a href=""><div class="productCatalog-name">акции и скидки</div> </a>
+                </div>
 
-                                </div>
+            </div>
+
+        </div>
     </section>
-    <section></section>
+    <!--brand -->
+    <section class="brand">
+        <div class="container">
+            <div class="brand-title">
+                <span>БРЕНДЫ</span>
+            </div>
+            <div class="row" style="align-items: center">
+
+                <div class="col">
+                    <img src="images/brands/brand1.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand2.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand3.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand4.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand5.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand6.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand8.png" alt="">
+                </div>
+                <div class="col">
+                    <img src="images/brands/brand9.png" alt="">
+                </div>
+                 <div class="brand-prev-icon col">
+                     <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M1.56766 11.0973L1.68106 11.2304L1.79534 11.098L6.11352 6.09804L6.1982 6L6.11352 5.90196L1.79534 0.901957L1.68106 0.769636L1.56765 0.902702L0.885837 1.7027L0.802361 1.80065L0.886476 1.89804L4.42908 6L0.886477 10.102L0.802362 10.1994L0.885837 10.2973L1.56766 11.0973Z" fill="#6122B1" stroke="#6122B1" stroke-width="0.3"/>
+                     </svg>
+                 </div>
+            </div>
+
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
