--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                 </svg>
 
 
-                                <span>(1)</span>
+                                <span>(55)</span>
                             </div>
                         </div>
 
@@ -481,7 +481,7 @@
 
                             <div class="promoOffers-price__stock">
                                 <span>Под заказ</span>
-                                11 000 Грн
+                                15 000 Грн
                             </div>
 
 
@@ -542,7 +542,7 @@
                                 </svg>
 
 
-                                <span>(1)</span>
+                                <span>(35)</span>
                             </div>
                         </div>
 
@@ -551,7 +551,7 @@
 
                             <div class="promoOffers-price__stock">
                                 <span>Под заказ</span>
-                                11 000 Грн
+                                6 000 Грн
                             </div>
 
 
@@ -612,7 +612,7 @@
                                 </svg>
 
 
-                                <span>(1)</span>
+                                <span>(234)</span>
                             </div>
                         </div>
 
@@ -621,7 +621,7 @@
 
                             <div class="promoOffers-price__stock">
                                 <span>Под заказ</span>
-                                11 000 Грн
+                                8 000 Грн
                             </div>
 
 
@@ -640,10 +640,87 @@
 
         </div>
         <div class="promoOffers-buttonAll">
-            <button class="btn"> Смотреть все предложения</button>
+
+            <button class="btn">
+                <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.77727 13.1763L1.95338 13.3534L2.13065 13.1774L8.17611 7.17744L8.35489 7L8.17611 6.82256L2.13065 0.822557L1.95337 0.646612L1.77727 0.823728L0.82272 1.78373L0.646285 1.96117L0.823891 2.13744L5.72329 7L0.823892 11.8626L0.646285 12.0388L0.82272 12.2163L1.77727 13.1763Z" fill="#59D230" stroke="#59D230" stroke-width="0.5"/>
+                </svg>
+                Смотреть все предложения
+            </button>
         </div>
     </section>
-    <section></section>
+    <!--Our advantages -->
+    <section class="ourAdvantages">
+    <div class="container">
+        <div class="page-up">
+            <img src="images/ourAdvantages/ourAdvantages.png" alt="">
+        </div>
+        <div class="ourAdvantages-title">Почему покупатели выбирают магазин ExVELO?</div>
+        <div class="ourAdvantages-row">
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__text">
+                    <div>Большой опыт</div>
+                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    </section>
+
     <section></section>
     <section></section>
     <section></section>
