--- a/index.html
+++ b/index.html
@@ -660,73 +660,113 @@
             <div class="ourAdvantages-col">
                 <div class="ourAdvantages-col__figure">1</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">Большой опыт</div>
+                    <div class="ourAdvantages-col__content">С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
                 </div>
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">2</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
-                </div>
-
-            </div>
-            <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
-                <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">приемлемые цены</div>
+                    <div class="ourAdvantages-col__content">Поддерживаем доступные цены за счет прямых поставок от производителей.</div>
                 </div>
 
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">3</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">официальные представители</div>
+                    <div class="ourAdvantages-col__content">Официально представляем в нашем регионе такие фирмы как: TREK, Kellys, KLS, FOX, FireEye, Maxxis, Zefal.</div>
+                </div>
+
+            </div>
+            <div class="ourAdvantages-col">
+                <div class="ourAdvantages-col__figure">4</div>
+                <div class="ourAdvantages-col__text">
+                    <div class="ourAdvantages-col__title">Эксклюзивность</div>
+                    <div class="ourAdvantages-col__content">Мы единственные в нашем регионе, кто занимается продажей и ремонтом электронаборов и электровелосипедов.</div>
                 </div>
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">5</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">профессиональные консультации</div>
+                    <div>Каждый год мы бываем на веловыставках, знаем все о новинках в этой сфере и грамотно консультируем клиентов.</div>
                 </div>
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">6</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">Быстрая отправка заказов</div>
+                    <div class="ourAdvantages-col__content">Отправляем заказы в короткие сроки: в день заказа (предоплата или оплата 100% до 14.00), либо на следующий день, кроме воскресенья.</div>
                 </div>
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">7</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">Ремонт и обслуживание</div>
+                    <div class="ourAdvantages-col__content">Обслуживаем и ремонтируем огромное количество велосипедов на высшем уровне, к нам приходят по рекомендациям.</div>
                 </div>
             </div>
             <div class="ourAdvantages-col">
-                <div class="ourAdvantages-col__figure">1</div>
+                <div class="ourAdvantages-col__figure">8</div>
                 <div class="ourAdvantages-col__text">
-                    <div>Большой опыт</div>
-                    <div>С 2012 года занимаемся реализацией велосипедов, запчастей, а также ремонтируем и обслуживаем велосипеды.</div>
+                    <div class="ourAdvantages-col__title">участие в тендерах</div>
+                    <div class="ourAdvantages-col__content">Принимаем участие в тендерах, госзакупках велосипедов и сопутствующих товаров, и всегда их выигрываем.</div>
                 </div>
             </div>
         </div>
     </div>
+    </section>
+    <!--contact us -->
+    <section class="contactUs">
+    <div class="container">
+    <div class="row">
+        <div class="col contactUs-col">
+            <div class="contactUs-title">Связаться с нами !</div>
+            <div class="contactUs-content">
+                У вас остались вопросы?  Обращайтесь и наш
+                менеджер с удовольствием проконсультирует Вас!
+            </div>
+            <form class="contactUs-form" action="">
+                <input type="text" placeholder="Имя">
+                <input type="tel" placeholder="Введите телефон">
+                <button class="btn contactUs-button">Получить консультацию</button>
+            </form>
+        </div>
+        <div class="col contactUs-col__img">
+            <img  style="width: 563px;height: 408px"  src="images/contactus/pngwing2.png" alt="">
+        </div>
+    </div>
+        
+    </div>
 
 
     </section>
+    <!--comment -->
+    <section class="comment">
+        <div class="containar">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </div>
 
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    </section>
+    <section>
+        <div class="containar">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </div>
+    </section>
+
 </main>
-<footer>
+<footer class="footer">
+
 </footer>
 <script src="js/index.js"></script>
 </body>
