--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 сборке и настройке велосипедов</p>
                             <button class="btn">Хочу свой велосипед</button>
                         </div>
-                        <img style="width: 352px;" src="images/banner/Mask-Group1.jpg" alt="">
+                        <img style="width: 352px;" src="images/banner/MaskGroup1.jpg" alt="">
                     </div>
 
                     <div style="padding-top: 27px;" class="pos-rel">
@@ -764,9 +764,9 @@
     <section class="comment">
         <div class="container">
             <div class="comment-title">
-               <span> ОТЗЫВЫ </span>
+                <span> ОТЗЫВЫ </span>
                 <div class="comment-pref">
-                    <div  class="pref-left">
+                    <div class="pref-left">
                         <svg width="26" height="33" viewBox="0 0 26 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="0.5" y="0.5" width="25" height="32" fill="white" stroke="#D9D9D9"/>
                             <path opacity="0.5"
@@ -791,7 +791,7 @@
                         <svg width="40" height="25" viewBox="0 0 40 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 25V0H33.0097L40 12.2642L33.0097 25H0Z" fill="#59D230"/>
                         </svg>
-                        <div> 5 </div>
+                        <div> 5</div>
 
                     </div>
                     <div class="comment-name">Артем Николаевич</div>
@@ -833,7 +833,7 @@
                         <svg width="40" height="25" viewBox="0 0 40 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 25V0H33.0097L40 12.2642L33.0097 25H0Z" fill="#59D230"/>
                         </svg>
-                        <div> 5 </div>
+                        <div> 5</div>
 
                     </div>
                     <div class="comment-name">Артем Николаевич</div>
@@ -871,7 +871,7 @@
                         <svg width="40" height="25" viewBox="0 0 40 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 25V0H33.0097L40 12.2642L33.0097 25H0Z" fill="#59D230"/>
                         </svg>
-                        <div> 5 </div>
+                        <div> 5</div>
 
                     </div>
                     <div class="comment-name">
@@ -923,20 +923,122 @@
     <!--blog -->
     <section class="blog">
         <div class="container">
-            <div class="blog-title">Последние статьи <span> / Перейти в блог</span></div>
+            <div class="blog-title">
+                Последние статьи
+                <span>/ Перейти в блог</span>
+            </div>
             <div class="row">
-                <div class="col">
+                <div class="col blog-col">
+                    <img src="images/blog/image1.jpg" alt="">
+                    <div class="blog-content">
+                        <div class="blog-col__title">
+                            Электровелосипед на базе Dorozhnik ВТ
+                        </div>
+                        <div class="blog-col__date">
+                            21/09/2020
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col  blog-col">
+                    <img src="images/blog/image2.jpg" alt="">
+                    <div class="blog-content">
+                        <div class="blog-col__title">
+                            Зачем нужны перчатки?
+                        </div>
+                        <div class="blog-col__date">
+                            21/09/2020
+                        </div>
+                    </div>
+                </div>
+                <div class="col  blog-col">
+                    <img src="images/blog/image3.jpg" alt="">
+                    <div class="blog-content">
+                        <div class="blog-col__title">
+                            Какой размер колеса выбрать?
+                        </div>
+                        <div class="blog-col__date">
+                            21/09/2020
+                        </div>
+                    </div>
+                </div>
+                <div class="col  blog-col">
+                    <img src="images/blog/image3.jpg" alt="">
+                    <div class="blog-content">
+                        <div class="blog-col__title">
+                            Как выбрать покрышку для велосипеда?
+                        </div>
+                        <div class="blog-col__date">
+                            21/09/2020
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
 </main>
 <footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="footer-logo">
+                    <img src="images/footer/logo-footer.png" alt="">
+                    <div>
+                        Велосипеды, велоаксессуары,
+                        запчасти к велосипедам, компоненты
+                        по доступным ценам
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <ul>
+                    <li>Каталог</li>
+                    <li>Велосипеды</li>
+                    <li>Аксессуары</li>
+                    <li>Экипировка/Форма</li>
+                    <li>Запчасти для велосипедов</li>
+                    <li>Самокаты</li>
+                    <li>Электротранспорт</li>
+                    <li>Зимные товары</li>
+                    <li>Услуги:сборка и ремонт</li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul>
+                    <li>Инфо</li>
+                    <li>О нас</li>
+                    <li>Доставка и оплата</li>
+                    <li>Видеообзоры</li>
+                    <li>Наши работы</li>
+                    <li>Отзывы</li>
+                    <li>Блог</li>
+                    <li>Возврат-обмен</li>
+                    <li>Политика конфиденциальности
+                        и договор оферты
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <div> Связь с нами</div>
+                <div>
+                    +38 095 553 63 99
+                    (вайбер, телеграм)
+                </div>
+                <div>+38 068 553 63 99</div>
+                <div>г. Северодонецк, б-р Дружбы народов , 26</div>
+                <div>ПОдписывайтесь на нас</div>
+            </div>
+            <div class="col"></div>
+        </div>
 
+        <div class="footer-">
+
+           <div>© Интернет-магазин “Exvelo” 2020 г.
+            Все права защищены</div>
+            <div>Разработка сайта  </div>
+        </div>
+    </div>
 </footer>
 <script src="js/index.js"></script>
 </body>
