--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
 
 
     </section>
-
     <!--Product Catalog -->
     <section class="productCatalog">
         <div class="container">
@@ -929,7 +928,9 @@
             </div>
             <div class="row">
                 <div class="col blog-col">
-                    <img src="images/blog/image1.jpg" alt="">
+                    <div class="blog-img">
+                        <img src="images/blog/image1.jpg" alt="">
+                    </div>
                     <div class="blog-content">
                         <div class="blog-col__title">
                             Электровелосипед на базе Dorozhnik ВТ
@@ -941,7 +942,9 @@
 
                 </div>
                 <div class="col  blog-col">
-                    <img src="images/blog/image2.jpg" alt="">
+                    <div class="blog-img">
+                        <img src="images/blog/image2.jpg" alt="">
+                    </div>
                     <div class="blog-content">
                         <div class="blog-col__title">
                             Зачем нужны перчатки?
@@ -952,7 +955,9 @@
                     </div>
                 </div>
                 <div class="col  blog-col">
-                    <img src="images/blog/image3.jpg" alt="">
+                    <div class="blog-img">
+                        <img src="images/blog/image3.jpg" alt="">
+                    </div>
                     <div class="blog-content">
                         <div class="blog-col__title">
                             Какой размер колеса выбрать?
@@ -963,7 +968,9 @@
                     </div>
                 </div>
                 <div class="col  blog-col">
-                    <img src="images/blog/image3.jpg" alt="">
+                    <div class="blog-img">
+                        <img src="images/blog/image4.jpg" alt="">
+                    </div>
                     <div class="blog-content">
                         <div class="blog-col__title">
                             Как выбрать покрышку для велосипеда?
@@ -984,7 +991,7 @@
             <div class="col">
                 <div class="footer-logo">
                     <img src="images/footer/logo-footer.png" alt="">
-                    <div>
+                    <div class="footer-logo__content">
                         Велосипеды, велоаксессуары,
                         запчасти к велосипедам, компоненты
                         по доступным ценам
@@ -993,50 +1000,67 @@
             </div>
             <div class="col">
                 <ul>
-                    <li>Каталог</li>
-                    <li>Велосипеды</li>
-                    <li>Аксессуары</li>
-                    <li>Экипировка/Форма</li>
-                    <li>Запчасти для велосипедов</li>
-                    <li>Самокаты</li>
-                    <li>Электротранспорт</li>
-                    <li>Зимные товары</li>
-                    <li>Услуги:сборка и ремонт</li>
+                    <li><a class="li-activ" href="">Каталог</a></li>
+                    <li><a href="">Велосипеды</a></li>
+                    <li><a href="">Аксессуары</a></li>
+                    <li><a href="">Экипировка/Форма</a></li>
+                    <li><a href="">Запчасти для велосипедов</a></li>
+                    <li><a href="">Самокаты</a></li>
+                    <li><a href="">Электротранспорт</a></li>
+                    <li><a href="">Зимные товары</a></li>
+                    <li><a href="">Услуги:сборка и ремонт</a></li>
                 </ul>
             </div>
             <div class="col">
                 <ul>
-                    <li>Инфо</li>
-                    <li>О нас</li>
-                    <li>Доставка и оплата</li>
-                    <li>Видеообзоры</li>
-                    <li>Наши работы</li>
-                    <li>Отзывы</li>
-                    <li>Блог</li>
-                    <li>Возврат-обмен</li>
-                    <li>Политика конфиденциальности
-                        и договор оферты
+                    <li><a href="" class="li-activ">Инфо</a></li>
+                    <li><a href="">О нас</a></li>
+                    <li><a href="">Доставка и оплата</a></li>
+                    <li><a href="">Видеообзоры</a></li>
+                    <li><a href="">Наши работы</a></li>
+                    <li><a href="">Отзывы</a></li>
+                    <li><a href="">Блог</a></li>
+                    <li><a href="">Возврат-обмен</a></li>
+                    <li>
+                        <a href="">
+                            <div class="lh1"> Политика конфиденциальности
+                                и договор оферты
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
             <div class="col">
-                <div> Связь с нами</div>
-                <div>
-                    +38 095 553 63 99
-                    (вайбер, телеграм)
-                </div>
-                <div>+38 068 553 63 99</div>
-                <div>г. Северодонецк, б-р Дружбы народов , 26</div>
-                <div>ПОдписывайтесь на нас</div>
+                <ul>
+                    <li class="li-activ"> Связь с нами</li>
+                    <li>
+                        <div class="lh1">
+                            <span>+38 095 553 63 99</span><br>
+                            <span class="main-color-gray">(вайбер, телеграм)</span>
+                        </div>
+                    </li>
+                    <li>+38 068 553 63 99</li>
+                    <li>
+                        <div class="lh1"> г. Северодонецк, б-р Дружбы народов , 26</div>
+                    </li>
+                    <li class="li-activ">
+                        Подписывайтесь на нас
+                        <div >
+                            <a class="pd20" href=""> <img src="images/footer/f.png" alt=""> </a>
+                            <a class="pd20" href=""> <img src="images/footer/instogram.png" alt=""> </a>
+                            <a class="pd20" href=""> <img src="images/footer/yootube.png" alt=""> </a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <div class="col"></div>
         </div>
 
-        <div class="footer-">
+        <div class="footer-button">
 
-           <div>© Интернет-магазин “Exvelo” 2020 г.
-            Все права защищены</div>
-            <div>Разработка сайта  </div>
+            <div>© Интернет-магазин “Exvelo” 2020 г.<br>
+                Все права защищены
+            </div>
+            <div>Разработка сайта</div>
         </div>
     </div>
 </footer>
